Dev fix teleport issue 2.1.6 (#238)
* plexpt localization work

* Fix teleport bug when remote driving.

* Fix some minor localization issues from PR.

* Fix some more incompatibilities due to dependency ordering. Add more surfaces to be blacklisted as well.

* Update changelog.

---------

Co-authored-by: plexpt <plexpt@gmail.com>

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -165,7 +165,7 @@ oarc-buddy-spawn-request-header=Buddy Request!
 
 oarc-buddy-refresh=Refresh Buddy List
 oarc-create-buddy-team=Create Your Own Buddy Team (buddy and you share research)
-oarc-create-buddy-team-tooltip=If this is enabled, you and your buddy will share research progress. 
+oarc-create-buddy-team-tooltip=If this is enabled, you and your buddy will share research progress.
 
 oarc-buddy-spawn-near=Request Buddy Spawn (Near)
 oarc-buddy-spawn-far=Request Buddy Spawn (Far)
@@ -294,6 +294,88 @@ oarc-mod-faq-shared-power=What is the shared power feature?
 oarc-mod-faq-shared-power-answer=This allows players to share their power network with other players. It will create a special power pole at their spawn point that connects to the shared power network wirelessly. It utilizes cross-surface power poles to make "wireless" connections.
 oarc-mod-faq-shared-chest=What is the shared chest feature?
 oarc-mod-faq-shared-chest-answer=This gives players a special chest at their spawn area that they can use to share items with other players. It uses the "linked-chest" item that is a hidden feature in Factorio. This allows players to share items with other players in a secure way.
+
+oarc-surface-settings-info=This lets you configure the surface settings, it is only available to admins. These settings are NOT available in the mod settings page. If you want to automatically set these on the start of a new game using a custom file, please check out the included template scenario in the mod folder. I really question my sanity for bothering to make this GUI interface. Send help.
+oarc-surface-settings-warning=WARNING: These settings are NOT sanitized, you might crash the game if you pick bad values!
+
+oarc-label-starting-respawn-items=Starting And Respawn Items
+oarc-label-starting-items=Starting Items
+oarc-label-respawn-items=Respawn Items
+oarc-label-crashed-ship-items=Crashed Ship Items
+oarc-label-crashed-ship-max=Crashed Ship (Max 5)
+oarc-label-ship-wreckage-max=Ship Wreckage (Max 1)
+oarc-label-spawn-area-resources=Spawn Area Resources
+oarc-label-spawn-area-misc=Spawn Area Misc
+oarc-select-surface-label=Select Surface:
+oarc-select-surface-tooltip=Select the surface you want to configure.
+oarc-revert-button=Revert
+oarc-revert-tooltip=Revert to default.
+oarc-copy-nauvis-button=Copy Nauvis
+oarc-copy-nauvis-tooltip=Copy Nauvis settings to this surface.
+
+oarc-add-item-tooltip=Add Item
+
+oarc-crash-site-enable-label=Enable Crashed Ship:
+oarc-crash-site-enable-tooltip=Enables the factorio style ship crash with items. If this is disabled, the crashed ship items and wreckage won't do anything.
+
+oarc-safe-area-config=Safe Area Config
+oarc-safe-area-tooltip=This controls how safe the area around the spawns is.
+oarc-safe-area-radius=Safe Area Radius
+oarc-safe-radius-tooltip=This is the radius in chunks around the spawn in which no enemies will spawn.
+oarc-warn-area-radius=Warn Area Radius
+oarc-warn-radius-tooltip=This is the radius in chunks around the spawn in which enemies will be significantly reduced.
+oarc-warn-area-reduction=Warn Area Reduction
+oarc-warn-reduction-tooltip=This is the reduction factor to reduce the number of enemies in the warn area. 10 means (1/10)th the number of enemies.
+oarc-danger-area-radius=Danger Area Radius
+oarc-danger-radius-tooltip=This is the radius in chunks around the spawn in which enemies will be slightly reduced.
+oarc-danger-area-reduction=Danger Area Reduction
+oarc-danger-reduction-tooltip=This is the reduction factor to reduce the number of enemies in the danger area. 10 means (1/10)th the number of enemies.
+
+oarc-solid-resources-config=Solid Resources Config
+oarc-solid-resources-tooltip=This controls the resources that will spawn around the spawn area.
+
+oarc-fluid-resources-config=Fluid Resources Config
+oarc-fluid-resources-tooltip=This controls the fluid resources that will spawn around the spawn area.
+oarc-fluid-type=Type
+oarc-fluid-count=Count
+oarc-fluid-amount=Amount
+
+oarc-misc-config=Misc Config
+oarc-water=Water
+oarc-water-length=Water Length
+oarc-water-length-tooltip=This is the length in tiles of the water strip around the spawn area.
+oarc-water-x-offset=Water X Offset
+oarc-water-x-offset-tooltip=This is the x_offset in tiles, from the north of the spawn area.
+oarc-water-y-offset=Water Y Offset
+oarc-water-y-offset-tooltip=This is the y_offset in tiles, from the north of the spawn area.
+
+oarc-shared-chest=Shared Chest
+oarc-chest-x-offset=Chest X Offset
+oarc-chest-x-offset-tooltip=This is the x_offset in tiles, from the east of the spawn area.
+oarc-chest-y-offset=Chest Y Offset
+oarc-chest-y-offset-tooltip=This is the y_offset in tiles, from the east of the spawn area.
+
+oarc-shared-power-pole=Shared Power Pole
+oarc-power-x-offset=Power X Offset
+oarc-power-x-offset-tooltip=This is the x_offset in tiles, from the east of the spawn area.
+oarc-power-y-offset=Power Y Offset
+oarc-power-y-offset-tooltip=This is the y_offset in tiles, from the east of the spawn area.
+
+oarc-remove-item=Remove Item
+oarc-remove-resource=Remove Resource
+oarc-add-item=Add Item
+oarc-add-fluid-resource=Add Fluid Resource
+
+oarc-coins-available=Coins Available: __1__  [item=coin]
+oarc-broke-message=You're broke! Go kill some enemies or beg for change...
+
+oarc-character-invalid=Your character needs to be valid to use this! Make sure you are not inside a vehicle or dead!
+oarc-teleport-fail=Could not find a safe place to teleport the cargo pod!
+oarc-teleport-success=Teleported cargo pod to you!
+
+oarc-cleanup-30sec-warning=Map cleanup in 30 seconds... Unused and old map chunks will be deleted!
+oarc-cleanup-force-30sec-warning=Map cleanup (forced) in 30 seconds... Unused and old map chunks will be deleted!
+oarc-cleanup-complete=Map cleanup done, sorry for your loss.
 
 
 [entity-name]
