add more locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -385,7 +385,8 @@ oarc-auto-decon-coins-caption=Auto Decon Coins
 oarc-auto-decon-coins-tooltip=Automatically marks coins dropped by enemies for deconstruction so robots will pick them up.
 oarc-player-self-reset-caption=Player Self Reset
 oarc-player-self-reset-tooltip=Allow players to reset themselves in the spawn controls.
-
+oarc-scale-spawner-damage-caption=Scale Spawner Damage
+oarc-scale-spawner-damage-tooltip=Scales damage done to spawners with evolution factor and distance to cloest spawn point. This helps compensate for spawner health scaling at a high evolution factor.
 
 oarc-teams-both-disabled-msg=Invalid setting! Both main force and separate teams are disabled! Enabling main force.
 oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is greater than or equal to near spawn max distance!
