--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -386,7 +386,9 @@ oarc-coin-generation-tooltip=敌人被杀死时掉落硬币。
 oarc-auto-decon-coins-caption=自动拆解硬币
 oarc-auto-decon-coins-tooltip=自动标记敌人掉落的硬币以供机器人拾取。
 oarc-player-self-reset-caption=玩家自我重置
-oarc-player-self-reset-tooltip=允许玩家在出生控制中重置自己。
+oarc-player-self-reset-tooltip=允许玩家在出生点控制中重置自己。
+oarc-scale-spawner-damage-caption=缩放刷怪点伤害
+oarc-scale-spawner-damage-tooltip=根据进化因子和距离最近出生点的距离来缩放对刷怪点的伤害。这有助于在高进化因子时补偿刷怪点的生命值缩放。
 
 oarc-teams-both-disabled-msg=设置无效！主队伍和独立队伍都被禁用！启用主队伍。
 oarc-spawn-distance-invalid-msg=设置无效！近距离出生点的最小距离大于或等于最大距离！
