add more locale gui (#245)
* add mod setting string locale

* add more locale gui

* add more locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -40,7 +40,7 @@ oarc-spawn-menu-solo-header=Create Your Own Spawn
 oarc-spawn-menu-shared-header=Join Another Spawn
 oarc-spawn-menu-buddy-header=Create A Buddy Spawn
 
-oarc-spawn-distance-slider-label=Distance From Map Center: 
+oarc-spawn-distance-slider-label=Distance From Map Center:
 oarc-spawn-distance-slider-tooltip=This is the minimum distance from the center of the map in chunks that you will spawn. You may spawn further away if the map has already been explored. Resources and enemies are both more abundant the further you go from the center, but you will still be guaranteed a safe starting area.
 
 oarc-starting-area-normal=You are spawned in a new area, with pre-set starting resources.
@@ -117,7 +117,7 @@ oarc-spawn-controls-disabled-delayed=Spawn is still generating! Refresh this tab
 oarc-player-reset-are-you-sure=Are you sure you want to reset?
 oarc-player-was-reset-notify=__1__ was reset!
 
-oarc-spawn-gps-location=Location: 
+oarc-spawn-gps-location=Location:
 oarc-shared-spawn-controls=Shared Spawn Controls
 oarc-shared-spawn-allow-joiners=Allow others to join your base.
 oarc-shared-spawn-full=Your base is full! No more players can join.
@@ -181,7 +181,7 @@ oarc-buddy-cancel-request=__1__ cancelled their buddy request!
 oarc-buddy-requesting-from-you=__1__ is requesting a buddy spawn from you!
 
 # [BUDDY NAME] oarc-buddy-txt-would-like {team choice} oarc-buddy-txt-next-to-you {moat choice} {surface choice} {distance choice}
-oarc-buddy-txt-would-like= would like to join 
+oarc-buddy-txt-would-like= would like to join
 oarc-buddy-txt-main-team=the main team
 oarc-buddy-txt-new-teams=on separate teams
 oarc-buddy-txt-buddy-team=a buddy team
@@ -377,6 +377,21 @@ oarc-cleanup-30sec-warning=Map cleanup in 30 seconds... Unused and old map chunk
 oarc-cleanup-force-30sec-warning=Map cleanup (forced) in 30 seconds... Unused and old map chunks will be deleted!
 oarc-cleanup-complete=Map cleanup done, sorry for your loss.
 
+oarc-non-mod-settings-header=Additional Settings (Not available in the mod settings menu.)
+oarc-coin-generation-subheader=Coin Generation
+oarc-coin-generation-caption=Coin Generation
+oarc-coin-generation-tooltip=Enemies drop coins when killed.
+oarc-auto-decon-coins-caption=Auto Decon Coins
+oarc-auto-decon-coins-tooltip=Automatically marks coins dropped by enemies for deconstruction so robots will pick them up.
+oarc-player-self-reset-caption=Player Self Reset
+oarc-player-self-reset-tooltip=Allow players to reset themselves in the spawn controls.
+oarc-scale-spawner-damage-caption=Scale Spawner Damage
+oarc-scale-spawner-damage-tooltip=Scales damage done to spawners with evolution factor and distance to cloest spawn point. This helps compensate for spawner health scaling at a high evolution factor.
+
+oarc-teams-both-disabled-msg=Invalid setting! Both main force and separate teams are disabled! Enabling main force.
+oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is greater than or equal to near spawn max distance!
+oarc-world-eater-invalid-msg=Invalid setting! World eater is enabled but regrowth is not! Disabling world eater.
+oarc-default-surface-invalid-msg=Invalid setting! Default surface does not exist! Setting to nauvis.
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
