Saving major work implementing and testing secondary spawns on other surfaces. Still semi-experimental.

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -329,13 +329,13 @@ oarc-fluid-count=Anzahl
 oarc-fluid-amount=Menge
 
 oarc-misc-config=Sonstiges-Konfiguration
-oarc-water=Wasser
-oarc-water-length=Wasserlänge
-oarc-water-length-tooltip=Dies ist die Länge in Kacheln des Wasserstreifens um den Spawn-Bereich.
-oarc-water-x-offset=Wasser X-Versatz
-oarc-water-x-offset-tooltip=Dies ist der X-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
-oarc-water-y-offset=Wasser Y-Versatz
-oarc-water-y-offset-tooltip=Dies ist der Y-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
+oarc-liquid=Wasser
+oarc-liquid-length=Wasserlänge
+oarc-liquid-length-tooltip=Dies ist die Länge in Kacheln des Wasserstreifens um den Spawn-Bereich.
+oarc-liquid-x-offset=Wasser X-Versatz
+oarc-liquid-x-offset-tooltip=Dies ist der X-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
+oarc-liquid-y-offset=Wasser Y-Versatz
+oarc-liquid-y-offset-tooltip=Dies ist der Y-Versatz in Kacheln, gemessen vom Norden des Spawn-Bereichs.
 
 oarc-shared-chest=Gemeinsame Truhe
 oarc-chest-x-offset=Truhe X-Versatz
