--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -30,7 +30,6 @@ oarc-mod-enable-friendly-fire=Enable friendly fire
 
 oarc-mod-main-force-name=Main force name
 oarc-mod-default-surface=Default starting surface
-oarc-mod-enable-secondary-spawns=Enable secondary spawns
 
 oarc-mod-scale-resources-around-spawns=Scale resources around spawns
 oarc-mod-modified-enemy-spawning=Scale enemies around spawns
@@ -51,7 +50,7 @@ oarc-mod-spawn-general-radius-tiles=Spawn area radius
 oarc-mod-spawn-general-moat-width-tiles=Spawn moat width
 oarc-mod-spawn-general-tree-width-tiles=Spawn tree ring width
 oarc-mod-spawn-general-enable-resources-circle-shape=Spawn resource deposits shape
-oarc-mod-spawn-general-enable-force-grass=Force spawn area grass
+oarc-mod-spawn-general-enable-force-tiles=Fill spawn area tiles
 oarc-mod-spawn-general-shape=Spawn area shape
 
 oarc-mod-resource-placement-enabled=Starting resource auto placement
@@ -93,7 +92,6 @@ oarc-mod-enable-friendly-fire=Enables friendly fire. So you can shoot your chest
 
 oarc-mod-main-force-name=The name of the main force. This is the default team that is created when the game starts.
 oarc-mod-default-surface=The default surface that players will spawn on if they join the main team or if spawning on other surfaces is not enabled.
-oarc-mod-enable-secondary-spawns=Enabling this will provide players with a secondary spawn point when they first move to a new surface/planet. This is only applicable if the other surface is enabled for separate spawns.
 
 oarc-mod-scale-resources-around-spawns=This scales resources around every spawn area so far away spawns aren't immediately next to very rich deposits.
 oarc-mod-modified-enemy-spawning=This scales the enemy spawning globally based on the allowed spawn distances to avoid every spawn being surrounded by behemoth worms.
@@ -114,7 +112,7 @@ oarc-mod-spawn-general-radius-tiles=This is the radius of the spawn area in tile
 oarc-mod-spawn-general-moat-width-tiles=This is the width of the moat around the spawn area in tiles, if a moat is enabled and selected at spawn time.
 oarc-mod-spawn-general-tree-width-tiles=This is the width of the tree ring around the spawn area in tiles. It guarantees some trees near to spawn.
 oarc-mod-spawn-general-enable-resources-circle-shape=This is the shape of the starting area resource deposits.
-oarc-mod-spawn-general-enable-force-grass=Enabling this will make the entire spawn area pure grass. Disabling will use landfill as needed instead.
+oarc-mod-spawn-general-enable-force-tiles=Enabling this will fill the entire spawn area with a specific tile (grass on Nauvis). Otherwise, landfill will be used as needed to fill in any gaps instead.
 oarc-mod-spawn-general-shape=This is the shape of the spawn area.
 
 oarc-mod-resource-placement-enabled=You should leave this enabled unless you are manually specifying resource placements in the custom scenario!
