--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -341,13 +341,13 @@ oarc-fluid-count=Count
 oarc-fluid-amount=Amount
 
 oarc-misc-config=Misc Config
-oarc-water=Water
-oarc-water-length=Water Length
-oarc-water-length-tooltip=This is the length in tiles of the water strip around the spawn area.
-oarc-water-x-offset=Water X Offset
-oarc-water-x-offset-tooltip=This is the x_offset in tiles, from the north of the spawn area.
-oarc-water-y-offset=Water Y Offset
-oarc-water-y-offset-tooltip=This is the y_offset in tiles, from the north of the spawn area.
+oarc-liquid=Liquid
+oarc-liquid-length=Liquid Length
+oarc-liquid-length-tooltip=This is the length in tiles of the liquid strip in the spawn area. Only placed if there is no moat.
+oarc-liquid-x-offset=Liquid X Offset
+oarc-liquid-x-offset-tooltip=This is the x_offset in tiles, from the north of the spawn area.
+oarc-liquid-y-offset=Liquid Y Offset
+oarc-liquid-y-offset-tooltip=This is the y_offset in tiles, from the north of the spawn area.
 
 oarc-shared-chest=Shared Chest
 oarc-chest-x-offset=Chest X Offset
