--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -343,13 +343,13 @@ oarc-fluid-amount=量
 
 
 oarc-misc-config=杂项配置
-oarc-water=水
-oarc-water-length=水的长度
-oarc-water-length-tooltip=这是基地周围水带的长度（单位：格）。
-oarc-water-x-offset=水的 X 偏移
-oarc-water-x-offset-tooltip=这是从基地北部的 x 轴偏移（单位：格）。
-oarc-water-y-offset=水的 Y 偏移
-oarc-water-y-offset-tooltip=这是从基地北部的 y 轴偏移（单位：格）。
+oarc-liquid=水
+oarc-liquid-length=水的长度
+oarc-liquid-length-tooltip=这是基地周围水带的长度（单位：格）。
+oarc-liquid-x-offset=水的 X 偏移
+oarc-liquid-x-offset-tooltip=这是从基地北部的 x 轴偏移（单位：格）。
+oarc-liquid-y-offset=水的 Y 偏移
+oarc-liquid-y-offset-tooltip=这是从基地北部的 y 轴偏移（单位：格）。
 
 oarc-shared-chest=共享箱
 oarc-chest-x-offset=箱的 X 偏移
