Fix regrowth and migration issues.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -393,6 +393,8 @@ oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is grea
 oarc-world-eater-invalid-msg=Invalid setting! World eater is enabled but regrowth is not! Disabling world eater.
 oarc-default-surface-invalid-msg=Invalid setting! Default surface does not exist! Setting to nauvis.
 
+oarc-research-finished=Team __1__ has finished researching __2__!
+
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
 oarc-linked-power=OARC Linked Power
