Renaming startup setting for enabling secondary spawns. Adding some helper commands. Fixing more migration issues.

--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -372,8 +372,8 @@ oarc-coins-available=可用金币：__1__  [item=coin]
 oarc-broke-message=你破产了！去杀些敌人或讨些零钱吧……
 
 oarc-character-invalid=要使用此功能，您的角色必须有效！确保您不在任何载具内或处于死亡状态！
-oarc-teleport-fail=找不到安全的地方来传送货舱！
-oarc-teleport-success=货舱已传送到您身边！
+oarc-teleport-cargo-pod-fail=找不到安全的地方来传送货舱！
+oarc-teleport-cargo-pod-success=货舱已传送到您身边！
 
 oarc-cleanup-30sec-warning=地图清理将在30秒后开始... 未使用和过期的地图区块将被删除！
 oarc-cleanup-force-30sec-warning=地图强制清理将在30秒后开始... 未使用和过期的地图区块将被删除！
