--- a/locale/en/locale-mod-settings.cfg
+++ b/locale/en/locale-mod-settings.cfg
@@ -2,7 +2,7 @@
 oarc-mod=This is a multiplayer mod that allows every player to create their own spawn point when they join the game. There are a lot of helpful features to ensure that new players can join at anytime in the game or even join other player's spawn areas.\n\n[color=red][font=default-bold]Please check out the github page and discord for more information and support.[/font][/color]\n\n[font=default-small]This USED to be available as a scenario, but now is only provided as a mod. To start a new game with this mod, just use the default freeplay scenario. The scenario included in this mod only provides a template to overwrite the default freeplay scenario. It also provides a way for experienced server hosts to configure settings from a file instead of through the usual mod settings. Please read the control.lua file inside the scenario for notes.[/font]
 
 [mod-setting-name]
-oarc-mod-default-allow-spawning-on-other-surfaces=Default to allow spawns on other surfaces
+oarc-mod-default-enable-secondary-spawns-on-other-surfaces=Enable secondary spawns by default
 oarc-mod-linked-chest-size=Sharing chest capacity
 
 oarc-mod-welcome-msg-title=Welcome message title
@@ -64,7 +64,7 @@ oarc-mod-resource-placement-size-multiplier=Starting resource size multiplier
 oarc-mod-resource-placement-amount-multiplier=Starting resource amount multiplier
 
 [mod-setting-description]
-oarc-mod-default-allow-spawning-on-other-surfaces=This controls the default starting setting for whether to allow spawning on other surfaces. If enabled, by default all other surfaces will be available for players to spawn on. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
+oarc-mod-default-enable-secondary-spawns-on-other-surfaces=This controls the default behavior for whether other planets/surfaces allow secondary spawns. If enabled, by default all other surfaces will generate secondary spawns when players land on them. Secondary spawns mean that every player who starts their own base, gets their own landing site on the other planets/surfaces. [color=red]If you have other mods installed that add additional surfaces, I recommend leaving this disabled. Regardless of this setting, you can configure which surfaces allow spawning using the in game settings menu.[/color]
 oarc-mod-linked-chest-size=This is the size of the shared chest that players can use to share items with other players. This is only meaningful if the shared chest feature is enabled.
 
 oarc-mod-welcome-msg-title=This is the title of the welcome message that will be displayed to players when they join the game.
