--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -241,7 +241,7 @@ oarc-settings-tab-description=This tab contains the same mod settings in the mod
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Enable or Disable Surface Features
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
-oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. [color=red]This feature is currently a work in progress.[/color]
+oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. [color=red]This feature is currently a work in progress. If you enable this AFTER landing on a new planet, the next time you travel in a rocket you will be sent to a new spawn![/color]
 oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
 oarc-settings-tab-surface-column-header=Surface
 oarc-settings-tab-surface-spawning-enabled=Home
@@ -370,8 +370,9 @@ oarc-coins-available=Coins Available: __1__  [item=coin]
 oarc-broke-message=You're broke! Go kill some enemies or beg for change...
 
 oarc-character-invalid=Your character needs to be valid to use this! Make sure you are not inside a vehicle or dead!
-oarc-teleport-fail=Could not find a safe place to teleport the cargo pod!
-oarc-teleport-success=Teleported cargo pod to you!
+oarc-teleport-cargo-pod-fail=Could not find a safe place to teleport the cargo pod near you!
+oarc-teleport-cargo-pod-success=Teleported cargo pod to you!
+oarc-no-cargo-pods=No cargo pods found!
 
 oarc-cleanup-30sec-warning=Map cleanup in 30 seconds... Unused and old map chunks will be deleted!
 oarc-cleanup-force-30sec-warning=Map cleanup (forced) in 30 seconds... Unused and old map chunks will be deleted!
@@ -394,6 +395,11 @@ oarc-world-eater-invalid-msg=Invalid setting! World eater is enabled but regrowt
 oarc-default-surface-invalid-msg=Invalid setting! Default surface does not exist! Setting to nauvis.
 
 oarc-research-finished=Team __1__ has finished researching __2__!
+
+oarc-command-dude-wheres-my-cargo-pod=This will attempt to teleport any cargo-pods from the map center to you if they are on the same force as you. This is meant to be a temporary workaround until I find a way to send cargo pods directly to a new spawn.
+oarc-command-reroll-spawn=This will reroll your spawn (on whichever surface you are currently on). This is useful if you are stuck in a bad spot or want to try a different location. [color=red]Spam this at your own peril![/color]
+oarc-no-reroll-buddy-spawn=I haven't implemethed spawn rerolls for buddy spawns yet! You can try leaving and rejoining the game to get a new buddy spawn.
+oarc-spawn-rerolled=__1__ has rerolled their spawn point!
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
