--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -240,8 +240,9 @@ oarc-settings-tab-player-warning=You are not an admin. These settings are read-o
 oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game. Check the Surface Settings tab for surface-specific settings.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Enable or Disable Surface Features
-oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
-oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. [color=red]This feature is currently a work in progress. If you enable this AFTER landing on a new planet, the next time you travel in a rocket you will be sent to a new spawn![/color]
+oarc-settings-tab-surfaces-warning=Only Nauvis as primary and Fulgora as secondary are currently supported at this time! Don't change these settings if you have already landed on other planets.
+oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow players to START with custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
+oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom secondary spawns when they first travel to this surface. This allows players to have separate landing sites. [color=red]This feature is currently a work in progress. If you enable this AFTER landing on a new planet, the next time you travel in a rocket you will be sent to a new spawn![/color]
 oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
 oarc-settings-tab-surface-column-header=Surface
 oarc-settings-tab-surface-spawning-enabled=Home
