Add basic support for Vulcanus secondary spawns.
Have a workaround for demolishers that tracks them and destroys them if they are too close to the spawn. Can definitely be abused, but good enough for now. Fixed issue with joiners being teleported unexpectedly when rerolling a secondary spawn. Removed some old commented out code in utils. Tweak default danger radius to be smaller based on feedback. Fix fuild resources and sharing entities not moving when scaling spawn size. Added locale for welcome home ground text.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -401,6 +401,10 @@ oarc-command-dude-wheres-my-cargo-pod=This will attempt to teleport any cargo-po
 oarc-command-reroll-spawn=This will reroll your spawn (on whichever surface you are currently on). This is useful if you are stuck in a bad spot or want to try a different location. [color=red]Spam this at your own peril![/color]
 oarc-no-reroll-buddy-spawn=I haven't implemethed spawn rerolls for buddy spawns yet! You can try leaving and rejoining the game to get a new buddy spawn.
 oarc-spawn-rerolled=__1__ has rerolled their spawn point!
+oarc-reroll-spawn-command=If your spawn has issues, you can reroll it with /oarc-reroll-spawn! Please don't abuse this.
+
+oarc-spawn-ground-text-welcome=Welcome
+oarc-spawn-ground-text-home=Home
 
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
