add zh-CN locale

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -65,7 +65,7 @@ oarc-buddy-spawn-info=The buddy system requires 2 players in this menu at the sa
 oarc-max-players-shared-spawn=You can allow up to __1__ other players to join you.
 oarc-spawn-dist-notes=Spawn distance is in CHUNKS from the center of the map.\nExpect a fight to reach other players.
 
-oarc-player-is-joining=__1__ is joining the game on __2__!
+oarc-player-is-joining=__1__ is joining the game on [planet=__2__]!
 oarc-player-started-own-team=__1__ has started their own team!
 oarc-player-no-new-teams-sorry=Sorry, no new teams can be created. You were assigned to the default team instead.
 oarc-no-ungenerated-land-error=[color=red]Failed to find ungenerated land to spawn on! Please try again. If you see this message multiple times, it could be a settings or mod conflict issue.[/color]
@@ -240,7 +240,7 @@ oarc-settings-tab-player-warning=You are not an admin. These settings are read-o
 oarc-settings-tab-description=This tab contains the same mod settings in the mod settings menu AND some additional settings that can only be changed in game. Check the Surface Settings tab for surface-specific settings.
 oarc-settings-tab-text-field-enter-tooltip=[color=red]You must press ENTER after typing in a text field to save the value![/color]
 oarc-settings-tab-title-surface=Enable or Disable Surface Features
-oarc-settings-tab-surfaces-warning=Only Nauvis as primary is recommended! All planets support secondary spawns at this time, but it is still a work in progress. Please don't change these settings if you have already landed on other planets unless you are okay with losing your progress on those planets.
+oarc-settings-tab-surfaces-warning=Only [planet=nauvis] as primary is recommended! All planets support secondary spawns at this time, but it is still a work in progress. Please don't change these settings if you have already landed on other planets unless you are okay with losing your progress on those planets.
 oarc-settings-tab-surface-checkbox-tooltip=Enabling this will allow players to START with custom spawn areas (the main feature of this mod) on this surface. You need at least one of these enabled for the mod to work.
 oarc-settings-tab-surface-secondary-checkbox-tooltip=Enabling this will give players custom landing areas when they first travel to this surface. This allows players to have separate landing sites. [color=red]This feature is currently a work in progress. If you enable this AFTER landing on a new planet, the next time you travel in a rocket you will be sent to a new spawn![/color]
 oarc-settings-tab-surface-regrowth-checkbox-tooltip=Enabling this will allow the regrowth and world eater features to work on this surface, if those are enabled.
@@ -276,7 +276,7 @@ oarc-shared-chest-helper-txt=This connects to a shared storage chest for all pla
 oarc-mod-faq-what-is-this-mod=What is this mod?
 oarc-mod-faq-what-is-this-mod-answer=This mod overhauls multiplayer spawning. Players can create their own spawn points away from the center of the map. Players can also join other players' bases, or create buddy spawns. The mod does not change the core gameplay of Factorio, but it does change the way players start the game. The starting area is a preset area with resources, not a "natural" spawn point.
 oarc-mod-faq-other-surfaces=Can I start on a different surface/planet?
-oarc-mod-faq-other-surfaces-answer=[color=red]I only recommend starting on "nauvis" or a default nauvis-like surface.[/color] The short answer is yes, but the you probably don't want to. There is no simple way to ensure that you can start on other planets without breaking the normal progression and gameplay. There are other mods out there, like Any Planet Start, but I have not tested compatibility yet.
+oarc-mod-faq-other-surfaces-answer=[color=red]I only recommend starting on [planet=nauvis] or a default nauvis-like surface.[/color] The short answer is yes, but the you probably don't want to. There is no simple way to ensure that you can start on other planets without breaking the normal progression and gameplay. There are other mods out there, like Any Planet Start, but I have not tested compatibility yet.
 oarc-mod-faq-secondary-spawns=What are secondary spawns?
 oarc-mod-faq-secondary-spawns-answer=If enabled, when a player first travels to a new planet/surface, they will automatically be given a separate landing area based on their primary spawn choice (the first spawn they create). [color=red]This feature is currently a work in progress, but I have now added support for the Space Age planets (fulgora, gleba, vulcanus, and Aquilo).[/color] There are some known issues, such as cargo-pods landing at the center of the map if you don't have a landing pad setup yet (use the /oarc-wheres-my-cargo-pod command to retrieve them). Additionally, Vulcanus doesn't yet provide any API support to modify demolishers or territories, so I have a crude safety mechanism that removes demolishers close to your spawn area. All planets should still be playable, but it's not perfect. Please report issues to me on discord/github.
 oarc-mod-faq-enemy-scaling=How are enemies handled?
@@ -313,8 +313,8 @@ oarc-select-surface-label=Select Surface:
 oarc-select-surface-tooltip=Select the surface you want to configure.
 oarc-revert-button=Revert
 oarc-revert-tooltip=Revert to default.
-oarc-copy-nauvis-button=Copy Nauvis
-oarc-copy-nauvis-tooltip=Copy Nauvis settings to this surface.
+oarc-copy-nauvis-button=Copy [planet=nauvis]
+oarc-copy-nauvis-tooltip=Copy [planet=nauvis] settings to this surface.
 
 oarc-add-item-tooltip=Add Item
 
