--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -397,7 +397,7 @@ oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is grea
 oarc-world-eater-invalid-msg=Invalid setting! World eater is enabled but regrowth is not! Disabling world eater.
 oarc-default-surface-invalid-msg=Invalid setting! Default surface does not exist! Setting to nauvis.
 
-oarc-research-finished=Team __1__ has finished researching __2__!
+oarc-research-finished=Team __1__ has finished researching [technology=__2__]!
 
 oarc-command-dude-wheres-my-cargo-pod=This will attempt to teleport any cargo-pods from the map center to you if they are on the same force as you. This is meant to be a temporary workaround until I find a way to send cargo pods directly to a new spawn.
 oarc-command-reroll-spawn=This will reroll your spawn (on whichever surface you are currently on). This is useful if you are stuck in a bad spot or want to try a different location. [color=red]Spam this at your own peril![/color]
