--- a/locale/zh-CN/locale.cfg
+++ b/locale/zh-CN/locale.cfg
@@ -396,7 +396,7 @@ oarc-spawn-distance-invalid-msg=设置无效！近距离出生点的最小距离
 oarc-world-eater-invalid-msg=设置无效！世界吞噬者已启用但重生功能未启用！禁用世界吞噬者。
 oarc-default-surface-invalid-msg=设置无效！默认地表不存在！设置为 nauvis。
 
-oarc-research-finished=__1__队已完成研究 __2__！
+oarc-research-finished=__1__队已完成研究 [technology=__2__]
 
 oarc-command-dude-wheres-my-cargo-pod=如果货运舱与你属于同一队伍，此命令将尝试将地图中心的任何货运舱传送到你的位置。这是在我找到直接将货运舱发送到新生成点的方法之前的临时解决方案。
 oarc-command-reroll-spawn=这将重新生成你的起始点（在你当前所在的任何表面上）。如果你卡在了一个糟糕的位置或想尝试不同的位置，这会很有用。 [color=red]滥用此命令后果自负！[/color]
