More fancy planet name and icon localization.

--- a/locale/de/locale.cfg
+++ b/locale/de/locale.cfg
@@ -65,12 +65,12 @@ oarc-buddy-spawn-info=Das Buddy-System erfordert, dass 2 Spieler gleichzeitig in
 oarc-max-players-shared-spawn=Du kannst bis zu __1__ andere Spieler zulassen, dir beizutreten.
 oarc-spawn-dist-notes=Der Spawn-Abstand ist in CHUNKS vom Zentrum der Karte angegeben.\nErwarte Kämpfe, um andere Spieler zu erreichen.
 
-oarc-player-is-joining=__1__ tritt dem Spiel bei auf __2__!
+oarc-player-is-joining=__1__ tritt dem Spiel bei auf [planet=__2__]!
 oarc-player-started-own-team=__1__ hat sein eigenes Team gegründet!
 oarc-player-no-new-teams-sorry=Es tut uns leid, aber es können keine neuen Teams erstellt werden. Du wurdest stattdessen dem Standardteam zugewiesen.
 oarc-no-ungenerated-land-error=[color=red]Fehler: Es konnte kein ungenutztes Land zum Spawnen gefunden werden! Bitte versuche es erneut. Wenn du diese Nachricht mehrmals siehst, könnte dies ein Problem mit den Einstellungen oder eine Mod-Konflikt sein.[/color]
-oarc-buddies-are-joining=__1__ und __2__ treten dem Spiel gemeinsam bei auf __3__!
-oarc-player-new-secondary=__1__ hat eine sekundäre Basis auf __2__ gegründet!
+oarc-buddies-are-joining=__1__ und __2__ treten dem Spiel gemeinsam bei auf [planet=__3__]!
+oarc-player-new-secondary=__1__ hat eine sekundäre Basis auf [planet=__2__] gegründet!
 
 oarc-please-wait=BITTE WARTE, WÄHREND DEIN SPAWN-PUNKT GENERIERT WIRD!
 oarc-player-left-early=Spieler (__1__) hat das Spiel verlassen, bevor er/sie __2__ Minuten Spielzeit hatte. Ihr Spawn-Bereich wurde zur Bereinigung markiert.
@@ -262,7 +262,7 @@ oarc-shared-chest-helper-txt=Dies verbindet sich mit einer gemeinsamen Lagertruh
 oarc-mod-faq-what-is-this-mod=Was ist dieser Mod?
 oarc-mod-faq-what-is-this-mod-answer=Dieser Mod überarbeitet den Mehrspieler-Spawn. Spieler können ihre eigenen Spawn-Punkte abseits des Kartenmittelpunkts erstellen. Spieler können auch anderen Spielern beitreten oder Mitspieler-Spawns erstellen. Der Mod ändert das grundlegende Gameplay von Factorio nicht, sondern beeinflusst nur, wie die Spieler das Spiel beginnen. Das Startgebiet ist ein voreingestelltes Gebiet mit Ressourcen, kein „natürlicher“ Spawn-Punkt.
 oarc-mod-faq-other-surfaces=Kann ich auf einer anderen Oberfläche/Planet starten?
-oarc-mod-faq-other-surfaces-answer=[color=red]Dieses Feature ist derzeit in Arbeit. Daher funktioniert das Spawnen nur auf "Nauvis" oder einer standardmäßigen nauvis-ähnlichen Oberfläche korrekt.[/color]
+oarc-mod-faq-other-surfaces-answer=[color=red]Dieses Feature ist derzeit in Arbeit. Daher funktioniert das Spawnen nur auf __PLANET__nauvis__ oder einer standardmäßigen __PLANET__nauvis__-ähnlichen Oberfläche korrekt.[/color]
 oarc-mod-faq-secondary-spawns=Was sind sekundäre Spawns?
 oarc-mod-faq-secondary-spawns-answer=Wenn aktiviert, erhalten Spieler beim ersten Betreten einer neuen Oberfläche mit benutzerdefiniertem Spawn automatisch ein neues Startgebiet basierend auf ihrer primären Spawn-Wahl (dem ersten Spawn, den sie erstellen). [color=red]Dieses Feature ist derzeit in Arbeit. Sekundäre Spawns auf anderen Oberflächen können Probleme verursachen.[/color]
 oarc-mod-faq-what-are-teams=Was sind die verschiedenen Team-Optionen?
@@ -298,8 +298,8 @@ oarc-select-surface-label=Oberfläche auswählen:
 oarc-select-surface-tooltip=Wählen Sie die Oberfläche, die Sie konfigurieren möchten.
 oarc-revert-button=Zurücksetzen
 oarc-revert-tooltip=Auf Standard zurücksetzen.
-oarc-copy-nauvis-button=Nauvis kopieren
-oarc-copy-nauvis-tooltip=Kopiere Nauvis-Einstellungen auf diese Oberfläche.
+oarc-copy-nauvis-button=__PLANET__nauvis__ kopieren
+oarc-copy-nauvis-tooltip=Kopiere __PLANET__nauvis__-Einstellungen auf diese Oberfläche.
 
 oarc-add-item-tooltip=Gegenstand hinzufügen
 
