add floor Decorative tiles select

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -19,6 +19,8 @@ oarc-default-spawn-behavior=This is the default spawn behavior of a vanilla game
 
 oarc-surface-select-tooltip=Select the surface you would like to spawn on. (Disabled if only one surface is available.)
 
+oarc-tile-select-cap=Decorative tiles：
+
 oarc-join-main-team-radio=Join Main Team (shared research)
 oarc-join-main-team-tooltip=You will share research progress with other players on the main team.
 
