Saving work on custom events and example scenario.

--- a/TEMPLATE_SCENARIO/OARC/locale/en/locale-scenario.cfg
+++ b/TEMPLATE_SCENARIO/OARC/locale/en/locale-scenario.cfg
@@ -1,3 +1,6 @@
 scenario-name=OARC-TEMPLATE
 
 description=This is an EMPTY TEMPLATE scenario! It is provided as an example of how to override the default freeplay scenario if you want to. Additionally, experienced server hosts can configure all settings from a file instead of through the mod settings. Please read the control.lua file inside the scenario for notes. [color=red]To edit this scenario, you must make a copy of it and place it in your own scenarios folder first. Do not edit this scenario directly.[/color]
+
+# Custom locale settings example
+oarc-tile-select-cap=Decorative tiles: 
