Lots of changes to the color/sound/icons for various messages printed to players.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -79,7 +79,7 @@ oarc-host-left-new-host=__1__ has left so __2__ now owns their base.
 oarc-new-owner-msg=You have been given ownership of this base!
 
 oarc-player-changed-surface=__1__ is now on __2__!
-oarc-player-on-platform=__1__ is now on platform: __2__!
+oarc-player-on-platform=__1__ is now on [space-platform=__2__]!
 
 oarc-looking-for-buddy=__1__ is looking for a buddy.
 
