--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -404,6 +404,9 @@ oarc-command-reroll-spawn=This will reroll your spawn (on whichever surface you 
 oarc-no-reroll-buddy-spawn=I haven't implemethed spawn rerolls for buddy spawns yet! You can try leaving and rejoining the game to get a new buddy spawn.
 oarc-spawn-rerolled=__1__ has rerolled their spawn point!
 oarc-reroll-spawn-command=If your spawn has issues, you can reroll it with /oarc-reroll-spawn! Please don't abuse this.
+oarc-command-cleanup-player=Cleans up a player's base and resets them. This is the same effect as when a player leaves the game early. This is useful for cleaning up abandoned bases. There is NO CONFIRMATION and no UNDO, becareful!
+oarc-command-cleanup-player-usage=Usage: /oarc-cleanup-player [player_name]
+oarc-command-not-admin-warning=Cannot run command (__1__) - you are not an admin.
 
 oarc-spawn-ground-text-welcome=Welcome
 oarc-spawn-ground-text-home=Home
