Fix edge case where player can be reset while spawning.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -406,6 +406,7 @@ oarc-spawn-rerolled=__1__ has rerolled their spawn point!
 oarc-reroll-spawn-command=If your spawn has issues, you can reroll it with /oarc-reroll-spawn! Please don't abuse this.
 oarc-command-cleanup-player=Cleans up a player's base and resets them. This is the same effect as when a player leaves the game early. This is useful for cleaning up abandoned bases. There is NO CONFIRMATION and no UNDO, becareful!
 oarc-command-cleanup-player-usage=Usage: /oarc-cleanup-player [player_name]
+oarc-command-cleanup-player-online=Player must be offline to use this command!
 oarc-command-not-admin-warning=Cannot run command (__1__) - you are not an admin.
 
 oarc-spawn-ground-text-welcome=Welcome
