--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -391,6 +391,8 @@ oarc-player-self-reset-caption=Player Self Reset
 oarc-player-self-reset-tooltip=Allow players to reset themselves in the spawn controls.
 oarc-scale-spawner-damage-caption=Scale Spawner Damage
 oarc-scale-spawner-damage-tooltip=Scales damage done to spawners with evolution factor and distance to closest spawn point. This helps compensate for spawner health scaling at a high evolution factor.
+oarc-remove-decoratives-caption=Remove Decoratives
+oarc-remove-decoratives-tooltip=Removes decoratives in the spawn area to make it look nice and clean.
 
 oarc-teams-both-disabled-msg=Invalid setting! Both main force and separate teams are disabled! Enabling main force.
 oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is greater than or equal to near spawn max distance!
