First attempt at solving the cargo pods being dropped at center of the map problem for secondary spawns. Main force still works as before, but definitely an improvement.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -415,6 +415,8 @@ oarc-command-not-admin-warning=Cannot run command (__1__) - you are not an admin
 oarc-spawn-ground-text-welcome=Welcome
 oarc-spawn-ground-text-home=Home
 
+oarc-cargo-pod-main-force-warning=If you are on the main force, you need to manually retrieve your cargo pods by using the command: /oarc-wheres-my-cargo-pod
+
 [entity-name]
 oarc-linked-chest=OARC Linked Chest
 oarc-linked-power=OARC Linked Power
