Allow disabling of resource randomization. Added gleba resource spawning to square style base gen.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -393,6 +393,8 @@ oarc-scale-spawner-damage-caption=Scale Spawner Damage
 oarc-scale-spawner-damage-tooltip=Scales damage done to spawners with evolution factor and distance to closest spawn point. This helps compensate for spawner health scaling at a high evolution factor.
 oarc-remove-decoratives-caption=Remove Decoratives
 oarc-remove-decoratives-tooltip=Removes decoratives in the spawn area to make it look nice and clean.
+oarc-resource-placement-random-order-caption=Random Resource Placement Order
+oarc-resource-placement-random-order-tooltip=Randomizes the order in which resources are placed in the spawn area. Provides some minor variety in the starting area.
 
 oarc-teams-both-disabled-msg=Invalid setting! Both main force and separate teams are disabled! Enabling main force.
 oarc-spawn-distance-invalid-msg=Invalid setting! Near spawn min distance is greater than or equal to near spawn max distance!
