Fixing critical bug stopping loading the mod in an existing save.

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -51,6 +51,8 @@ oarc-join-shared-button-disable=Select A Player First!
 oarc-join-shared-button-tooltip=This will send a request to join the selected player's shared spawn area. You can cancel the request if you change your mind.
 oarc-join-someone-info=You can request to join someone else's starting area. This requires at least 1 person to have allowed access to their base and to have space for you to join.
 
+oarc-solo-spawn-disabled=Solo spawns are disabled in this mode.
+
 oarc-no-shared-avail=There are currently no shared bases availble to spawn at.
 oarc-join-check-again=Check Again
 oarc-shared-spawn-disabled=Shared spawns are disabled in this mode.
